labels size to avoid overlap

--- a/app/assets/stylesheets/settings/_print.scss
+++ b/app/assets/stylesheets/settings/_print.scss
@@ -71,6 +71,12 @@
     color: #999;
   }
 
+  .c3-chart-text {
+    .c3-texts {
+      font-size: 8px !important;
+    }
+  }
+
   .js-toggle-item {
     display: none;
 
